@startuml

title __EJERCICIO1's Class Diagram__\n

  namespace ar.edu.unahur.obj2.ejercicio1 {
    class ar.edu.unahur.obj2.ejercicio1.AgenciaDeViajes {
        + AgenciaDeViajes()
        + catalogoDePaquetes()
    }
  }
  

  namespace ar.edu.unahur.obj2.ejercicio1 {
    class ar.edu.unahur.obj2.ejercicio1.PaqueteCuyo {
        + getNombre()
        + imprimirItinerario()
        - print()
        # getTransporteIda()
        # getDia1()
        # getDia2()
        # getDia3()
        # getTransporteVuelta()
    }
  }
  

  namespace ar.edu.unahur.obj2.ejercicio1 {
    class ar.edu.unahur.obj2.ejercicio1.PaqueteNOA {
        + itinerario()
        - nombre()
        # transporteIda()
        # dia1()
        # dia2()
        # dia3()
        # transporteVuelta()
        - print()
    }
  }
  

  namespace ar.edu.unahur.obj2.ejercicio1 {
    class ar.edu.unahur.obj2.ejercicio1.PaquetePatagonia {
        + getItinerario()
        - print()
    }
  }
  

  ar.edu.unahur.obj2.ejercicio1.AgenciaDeViajes o-- ar.edu.unahur.obj2.ejercicio1.PaqueteCuyo : paqueteCuyo
  ar.edu.unahur.obj2.ejercicio1.AgenciaDeViajes o-- ar.edu.unahur.obj2.ejercicio1.PaqueteNOA : paqueteNOA
  ar.edu.unahur.obj2.ejercicio1.AgenciaDeViajes o-- ar.edu.unahur.obj2.ejercicio1.PaquetePatagonia : paquetePatagonia


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
